# dev-team

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: benchmark.yml  ci-retry.yml  ci.yml  pipeline-build-retry.yml  pipeline-build.yml  pipeline-pr-autofix.yml  pipeline-pr-conflict.yml  pipeline-pr-review.yml  pipeline-pr-revise.yml  setup-labels.yml
deploy/: dev-team-dashboard.service  dev-team-dispatch.service  dev-team@.service
docs/: ASSESSMENT.md  BENCHMARKS.md  DASHBOARD.md  DISPATCH.md  GITHUB_APP.md  INTERACTION.md  PIPELINE.md  RESEARCH.md  ROADMAP.md  SANDBOX.md  SECURITY.md  TRANSCRIPTS.md  TROUBLESHOOTING.md  VISION.md
docs/examples/: assessment-sample.md
docs/reviews/: 2026-07-13-full-review.md
scripts/: setup-labels.sh
src/dev_team/: __init__.py  __main__.py  accesslog.py  approval.py  assessment.py  backlog.py  benchmark.py  benchmark_history.py  budget.py  changes.py  chat.py  checks.py  cli.py  config.py  context.py  conventions.py  dashboard.py  deadcode.py  delivery_target.py  depscan.py  dispatch.py  engine.py  eolscan.py  errors.py  evals.py  eventlog.py  events.py  execution.py  failures.py  fences.py  foreman.py  frontend.py  git.py  githubapp.py  instrument.py  interaction.py  json_utils.py  memory.py  models.py  mutation.py  (+25 more)
src/dev_team/agents/: __init__.py  architect.py  base.py  devops.py  engineer.py  intake.py  manager.py  qa.py  retrospector.py  reviewer.py  security.py  sre.py  techwriter.py
tests/: helpers.py  test_accesslog.py  test_agents.py  test_approval.py  test_assessment.py  test_backlog.py  test_benchmark.py  test_benchmark_history.py  test_budget.py  test_changes.py  test_chat.py  test_checks.py  test_cli.py  test_config.py  test_context.py  test_conventions.py  test_dashboard.py  test_deadcode.py  test_delivery_target.py  test_depscan.py  test_dispatch.py  test_docs.py  test_docs_security_references.py  test_engine.py  test_eolscan.py  test_errors.py  test_evals.py  test_eventlog.py  test_events.py  test_execution.py  test_failures.py  test_fences.py  test_foreman.py  test_frontend.py  test_git.py  test_git_real.py  test_githubapp.py  test_instrument.py  test_interaction.py  test_interactive_runs.py  (+31 more)
